[package]
name = "neptune"
description = "Poseidon hashing over Zexe curves for Aleo."
version = "1.0.1"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/porcuquine/poseidon"

[dependencies]
lazy_static = "1.4.0"
blake2s_simd = "0.5"
byteorder = "1"
generic-array = "0.13.2"
triton = { version = "1.0.0", package = "neptune-triton", default-features=false, features=["opencl"], optional=true }
snarkos-models = { path = "../snarkOS/models", version = "0.8.0" }
snarkos-curves = { path = "../snarkOS/curves", version = "0.8.0" }
snarkos-gadgets = { path = "../snarkOS/gadgets", version = "0.8.0" }
snarkos-errors = { path = "../snarkOS/errors", version = "0.8.0" }
snarkos-utilities = { path = "../snarkOS/utilities", version = "0.8.0" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7.0"
sha2 = "0.8"
tempdir = "0.3"
rand_xorshift = "0.2.0"
serde_json = "1.0.53"

[build-dependencies]
snarkos-models = { path = "../snarkOS/models", version = "0.8.0" }
snarkos-curves = { path = "../snarkOS/curves", version = "0.8.0" }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "synthesis"
harness = false

[profile.bench]
incremental = false
codegen-units = 1

[features]
gpu = ["triton"]
